[workspace]
members = [ "diffie_hellman","fibonacci", "utils"]
resolver = "2"

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.0", default-features = false }

serde = "1.0.219"
hex = "0.4.3"
serde_json = "1.0.143"
thiserror = "2.0.16"

openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
num-bigint = { version = "0.4.6", features = ["serde"] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }