[workspace]
members = [ "diffie_hellman","fibonacci", "utils", "polynomial_sha256"]
resolver = "2"

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.1", default-features = false }

serde = "1.0.219"
hex = "0.4.3"
serde_json = "1.0.143"
thiserror = "2.0.16"
num-bigint = { version = "0.4.6", features = ["serde"] }
